# video-intelligence

./: .gitignore  Cargo.toml  README.md
migrations/: 20250723214346_create_updated_at_trigger.down.sql  20250723214346_create_updated_at_trigger.up.sql  20250723214353_create_users_table.up.sql  20250723220600_create_token_table.down.sql  20250723220600_create_token_table.up.sql  20250725120432_add_column_source_to_users.down.sql  20250725120432_add_column_source_to_users.up.sql  20250726063425_create_roles_table.down.sql  20250726063425_create_roles_table.up.sql
src/: main.rs
src/application/: mod.rs
src/application/configuration/: axum_server.rs  database.rs  mod.rs
src/application/errors/: application_error.rs
src/users/: mod.rs
src/users/repositories/: authentication_repository.rs  mod.rs  role_repository.rs  token_repository.rs  user_repository.rs
src/users/routes/: authentication.rs  authentication_routes.rs  mod.rs
src/users/services/: authentication_service.rs  jwt_service.rs  mod.rs
src/users/types/: access_token_response.rs  authentication_result.rs  login_request.rs  login_response.rs  mod.rs  role.rs  role_type.rs  token.rs  user.rs  user_request.rs  user_response.rs  user_source.rs
