[package]
name = "video-intelligence"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
jsonwebtoken = "9.3.1"
lettre = { version = "0.11.17", features = ["tokio1-native-tls", "builder"] }
log = "0.4.27"
rand = "0.9.2"
reqwest = "0.12.22"
resend-rs = "0.15.0"
serde = "1.0.219"
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "time"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full", "macros"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
